--- a/src/index.css
+++ b/src/index.css
@@ -2474,21 +2474,7 @@
   }
 }
 
-@font-face {
-  font-family: Centra_No2\:Medium;
-  src: url("https://cdn.jsdelivr.net/npm/@fontsource/plus-jakarta-sans/files/plus-jakarta-sans-latin-500-normal.woff2") format("woff2");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: Centra_No2\:Regular;
-  src: url("https://cdn.jsdelivr.net/npm/@fontsource/plus-jakarta-sans/files/plus-jakarta-sans-latin-400-normal.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+/* Centra No2 is loaded from local files via `src/styles/globals.css`. */
 
 :root {
   --font-size: 16px;
